<resources>
    <string name="app_name">Atlas Fit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Atlas Fit</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_sair">Sair</string>

    <string name="menu_login">Login</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_activities">Atividades</string>
    <string name="menu_meals">refeições</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_weight">Peso</string>
    <string name="name">Name</string>
    <string name="name2">Name2</string>
    <string name="name3">Name3</string>

    <string-array name="spinner_items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
    </string-array>
</resources>


