<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/botao_de_inicio"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/notas_adesivas"
            android:title="@string/menu_activities" />
        <item
            android:id="@+id/nav_meals"
            android:icon="@drawable/dish"
            android:title="@string/menu_meals" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/do_utilizador"
            android:title="@string/menu_perfil" />


    </group>
</menu>