<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.app_sd.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.app_sd.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.app_sd.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_insert_activities"
        android:name="com.example.app_sd.ui.activities.ActivitiesInsertFragment"
        android:label="@string/menu_activities"
        tools:layout="@layout/fragment_activities_insert" />

    <fragment
        android:id="@+id/nav_activities"
        android:name="com.example.app_sd.ui.activities.ActivitiesFragment"
        android:label="@string/menu_activities"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/nav_insert_meals"
        android:name="com.example.app_sd.ui.meals.MealsInsertFragment"
        android:label="@string/menu_activities"
        tools:layout="@layout/fragment_meals_insert" />

    <fragment
        android:id="@+id/nav_meals"
        android:name="com.example.app_sd.ui.meals.MealsInsertFragment"
        android:label="@string/menu_activities"
        tools:layout="@layout/fragment_meals" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.app_sd.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>